vendor/newrelic/tests/integration/errors/test_E_COMPILE_ERROR.zend.php
<?php

/*DESCRIPTION
The agent should capture and report compile errors.
*/

/*EXPECT_REGEX
^\s*(PHP )?Fatal error:\s*Cannot re-assign \$this in .*? on line [0-9]+\s*$
*/

/*EXPECT_TRACED_ERRORS
[
  "?? agent run id",
  [
    [
      "?? when",
      "OtherTransaction/php__FILE__",
      "Cannot re-assign $this",
      "E_COMPILE_ERROR",
      {
        "stack_trace": [],
        "agentAttributes": "??",
        "intrinsics": "??"
      }
    ]
  ]
]
*/

/*EXPECT_ERROR_EVENTS
[
  "?? agent run id",
  {
    "reservoir_size": "??",
    "events_seen": 1
  },
  [
    [
      {
        "type": "TransactionError",
        "timestamp": "??",
        "error.class": "E_COMPILE_ERROR",
        "error.message": "Cannot re-assign $this",
        "transactionName": "OtherTransaction\/php__FILE__",
        "duration": "??",
        "nr.transactionGuid": "??"
      },
      {},
      {}
    ]
  ]
]
*/

$this = 9;
